overflow-x fix

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 body {
   margin:  0;
   padding:  0;
+  overflow-x:  hidden;
   font-family: 'Roboto Mono', monospace;
   font-size:  120%;
   color:  #FFF;
